--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.320.0",
     "mongoose": "^8.1.1",
     "next": "^14.1.3",
@@ -28,6 +29,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.50.0",
     "react-intersection-observer": "^9.8.0",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "svix": "^1.16.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
